--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
 include_directories(include)
 include_directories(lib)
 
-add_executable(tracking main.cpp src/tracked_object.cpp include/tracked_object.h src/MyTrackers.cpp include/MyTrackers.h src/MyDetector.cpp include/MyDetector.h src/MyTracker.cpp include/MyTracker.h lib/cxxopts.hpp)
+add_executable(tracking main.cpp src/MyTrackers.cpp include/MyTrackers.h src/MyDetector.cpp include/MyDetector.h src/MyTracker.cpp include/MyTracker.h lib/cxxopts.hpp)
 
 target_link_libraries(tracking ${OpenCV_LIBS})
